modify config file

--- a/assets/config.json
+++ b/assets/config.json
@@ -1,4 +1,4 @@
 {
-  "mid": "GP_IamJkPz134k2QlEYVMB5IdsFadVIlpMq",
-  "key": "8gKpPENdd1NClJH0WAJFCf19AUyLpGvYgyW"
+  "mid": "--PLACE YOUR MERCHANT ID HERE--",
+  "key": "--PLACE YOUR MERCHANT KEY HERE--"
 }
